# rmc75e

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  THIRD_PARTY_LICENSES  hatch_build.py  pyproject.toml  setup_project_linux.sh  setup_project_windows.ps1
examples/: README.md  example_cpp.cpp  example_python.py
scripts/: binding_CMakeLists.txt  build_binding.py  build_config.py  build_eipscanner.py  build_example_cpp.py  build_wheels.py
src/rmc75e/: RMC75EClient.cpp  RMC75EClient.h  __init__.py  bindings.cpp
